<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context="com.registerlogindemo.activity.LoginActivity">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_login_your_app_with_your_email_and_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_drawable"
            android:gravity="center"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_drawable"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/loginBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_drawable"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/forgotPassTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/_5sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/registerTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="@dimen/_5sdp"
                android:text="@string/register"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
