<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context="com.registerlogindemo.activity.ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:text="Just Change your Password"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/edittext_drawable"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_drawable"
        android:gravity="center"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/confirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_drawable"
        android:gravity="center"
        android:hint="@string/onfirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14sdp" />

    <Button
        android:id="@+id/resetBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_drawable"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />
</LinearLayout>
