<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context="com.registerlogindemo.activity.RegisterActivity">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_drawable"
            android:gravity="center"
            android:hint="User Name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_drawable"
            android:gravity="center"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_drawable"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_drawable"
            android:gravity="center"
            android:hint="@string/onfirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/registerBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_drawable"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</LinearLayout>
